# elv-search

./: Cargo.toml  EluvioSearchEngine.md  README.md  SearchAPI.md
src/: crawler.rs  indexer.rs  lib.rs  searcher.rs  utils.rs
test-utils/src/: lib.rs
tests/: test_indexer.rs
