[package]
name = "elv-search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib"]
path = "src/lib.rs"

[dependencies]
elvwasm = { git = "ssh://git@github.com/eluv-io/elv_wasm.git", branch="search"}
regex = "*"
serde = "*"
serde_json = "*"
wapc = "0.10.1"
wapc-guest = "0.4.0"

[dev-dependencies]
mockall = "*"
test-utils = {path = "test-utils"}
